version 0.5:

version 0.4: 21/02/2011
	* improve 'lincom': now accepts weights of length 1
	* improve 'fancyContrasts': 'base' argument can be a level name
	* add 'beginsWith' and 'endsWith' string functions

version 0.3: 12/07/2010
	* add 'fancyContrasts' utility function
	* add 'swapNamesAndContents' utility function
	* add matrixAsTabular & friends utility functions
	* add 'collapse' wrapper to 'sep'
	* add 'lincom' linear combinations utility funcs
	* fix bug in disambiguate: 'fmt' arg was just ignored

version 0.2: 22/06/2010
	* add 'filterNames' function
	* add 'disambiguate' function
	* add 'isAmbiguous' alternative to 'isUnambiguous'

version 0.1: 15/06/2010
	initial release