@@ -2,9 +2,10 @@ Package: dmisc
 Type: Package
 Title: misc utility functions
 Version: 0.5
-Date: 2011-02-21
+Date: 2011-05-16
 Author: Antonio, Fabio Di Narzo
 Maintainer: Antonio, Fabio Di Narzo <antonio.fabio@gmail.com>
 Description: misc utility functions
+Depends: grid
 License: GPL v3
 LazyLoad: yes
