@@ -1,4 +1,5 @@
 version 0.5:
+	* add 'forest.compare': a grid-based forest plot function
 
 version 0.4: 21/02/2011
 	* improve 'lincom': now accepts weights of length 1
